Trying to fix mobile display of recaptcha.  Unfortunately, Google doesn't trust us to style recaptcha so I think I have to hide it on mobile.  Still have to figure out how to make it pass the test in that case.

--- a/app/assets/stylesheets/_custom.scss
+++ b/app/assets/stylesheets/_custom.scss
@@ -10,4 +10,10 @@
 html, body, .off-canvas-wrap, .inner-wrap, .content
 {
   height: 100%;
+.g-recapture {
+  @media screen and (max-width: $small-breakpoint) {
+    transform:scale(0.77);
+    transform-origin:0 0;
+  }
+}
 }
